--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href='https://github.com/richzhang/webpage-template'>[GitHub]</a></span><br>
+							<span style="font-size:24px"><a href='https://github.com/siyanz99/ds'>[Code]</a></span><br>
 						</center>
 					</td>
 				</tr>
