--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 <head>
 	<title>Decision Stacks</title>
 	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="Creative and Descriptive Paper Title." />
+	<meta property="og:title" content="Decision Stacks: Flexible Reinforcement Learning
+via Modular Generative Models" />
 	<meta property="og:description" content="Paper description." />
 
 	<!-- Get from Google Analytics -->
