--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <html>
 <head>
 	<title>Decision Stacks</title>
-	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
+	<meta property="og:image" content="traj.gif"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
 	<meta property="og:title" content="Decision Stacks: Flexible Reinforcement Learning
 via Modular Generative Models" />
 	<meta property="og:description" content="Paper description." />
@@ -139,7 +139,8 @@ via Modular Generative Models" />
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Creative and Descriptive Paper Title</span>
+		<span style="font-size:36px">Decision Stacks: Flexible Reinforcement Learning
+via Modular Generative Models</span>
 		<table align=center width=600px>
 			<table align=center width=600px>
 				<tr>
