--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 	<br>
 
 	<hr>
-	<center><h1>Talk</h1></center>
+	<center><h1>Decision Stacks</h1></center>
 	<p align="center">
 		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
 	</p>
@@ -211,7 +211,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 		<br>
 		<tr>
 			<center>
-				<span style="font-size:28px"><a href=''>[Slides]</a>
+				<span style="font-size:28px"><a href=''>[Results]</a>
 				</span>
 			</center>
 		</tr>
@@ -241,7 +241,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 		<center>
 			<tr>
 				<td>
-					Short description if wanted
+					Illustration for the Decision Stacks framework for learning reinforcement learning agents using probabilistic inference. In contrast to a time-induced ordering,  we propose a modular design that seggregates the modeling of observation, rewards, and action sequences. Each module can be flexibly parameterized via any generative model and the modules are chained via an autoregressive dependency graph to  provide high overall expressivity.
 				</td>
 			</tr>
 		</center>
