--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ via Modular Generative Models</span>
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:500px" src="./resources/traj.gif"/>
 					</center>
 				</td>
 			</tr>
@@ -258,7 +258,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paperds.png"/></a></td>
 			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
 				<b>Creative and Descriptive Paper Title.</b><br>
 				In Conference, 20XX.<br>
