--- a/index.html
+++ b/index.html
@@ -173,17 +173,7 @@ via Modular Generative Models</span>
 		</table>
 	</center>
 
-	<center>
-		<table align=center width=850px>
-			<tr>
-				<td width=260px>
-					<center>
-						<img class="round" style="width:500px" src="./resources/traj.gif"/>
-					</center>
-				</td>
-			</tr>
-		</table>
-	</center>
+
 
 	<hr>
 
@@ -203,9 +193,18 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 
 	<hr>
 	<center><h1>Decision Stacks</h1></center>
-	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-	</p>
+	<center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/traj.gif"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+	</center>
+
 
 	<table align=center width=800px>
 		<br>
@@ -256,11 +255,11 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 	<br>
 	<hr>
 	<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
+		<center><h1>Paper and Bibtex</h1></center>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paperds.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
+			<td><span style="font-size:14pt">Siyan Zhao and Aditya Grover.<br>
+				<b>Decision Stacks: Flexible Reinforcement Learning via Modular Generative Models</b><br>
 				In Conference, 20XX.<br>
 				(hosted on <a href="">ArXiv</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
