--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 			</tr>
 		</table>
 	</center>
+<center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/ds.gif"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+	</center>
 
 
 	<table align=center width=800px>
