--- a/index.html
+++ b/index.html
@@ -215,20 +215,21 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 			</tr>
 		</table>
 	</center>
-
-
-	<table align=center width=800px>
-		<br>
-		<tr>
-			<center>
-				<span style="font-size:28px"><a href=''>[Results]</a>
-				</span>
-			</center>
-		</tr>
+	<table align=center width=850px>
+		<center>
+			<tr>
+				<td>
+					Illustration for the Decision Stacks framework for learning reinforcement learning agents using probabilistic inference. In contrast to a time-induced ordering,  we propose a modular design that seggregates the modeling of observation, rewards, and action sequences. Each module can be flexibly parameterized via any generative model and the modules are chained via an autoregressive dependency graph to  provide high overall expressivity.
+				</td>
+			</tr>
+		</center>
 	</table>
+
+
+
 	<hr>
 
-	<center><h1>Code</h1></center>
+	<center><h1>Results</h1></center>
 
 	<table align=center width=420px>
 		<center>
@@ -247,15 +248,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 			</td>
 		</tr>
 	</table>
-	<table align=center width=850px>
-		<center>
-			<tr>
-				<td>
-					Illustration for the Decision Stacks framework for learning reinforcement learning agents using probabilistic inference. In contrast to a time-induced ordering,  we propose a modular design that seggregates the modeling of observation, rewards, and action sequences. Each module can be flexibly parameterized via any generative model and the modules are chained via an autoregressive dependency graph to  provide high overall expressivity.
-				</td>
-			</tr>
-		</center>
-	</table>
+
 	<table align=center width=800px>
 		<br>
 		<tr><center>
