--- a/index.html
+++ b/index.html
@@ -234,20 +234,41 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 	<table align=center width=420px>
 		<center>
 			<tr>
-				<td>
+				<td> 
+					<b> Offline Reinforcement Learning Performance in MDP <b>
 				</td>
 			</tr>
 		</center>
 	</table>
-	<table align=center width=400px>
-		<tr>
-			<td align=center width=400px>
-				<center>
-					<td><img class="round" style="width:450px" src="./resources/method_diagram.png"/></td>
-				</center>
-			</td>
-		</tr>
+		<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<td><img class="round" style="width:450px" src="./resources/mdp.png"/></td>
+				</td>
+			</tr>
+		</center>
 	</table>
+<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<b> Offline Reinforcement Learning Performance in POMDP <b>
+				</td>
+			</tr>
+		</center>
+	</table>
+		<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<td><img class="round" style="width:450px" src="./resources/mdp.png"/></td>
+				</td>
+			</tr>
+		</center>
+	</table>
+
+
 
 	<table align=center width=800px>
 		<br>
