--- a/index.html
+++ b/index.html
@@ -267,16 +267,25 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 			</tr>
 		</center>
 	</table>
-
-
-
-	<table align=center width=800px>
-		<br>
-		<tr><center>
-			<span style="font-size:28px">&nbsp;<a href='https://github.com/richzhang/webpage-template'>[GitHub]</a>
-			</center>
-		</span>
+		<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<b> Maze2D tasks <b>
+				</td>
+			</tr>
+		</center>
 	</table>
+		<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<td><img class="round" style="width:450px" src="./resources/maze.png"/></td>
+				</td>
+			</tr>
+		</center>
+	</table>
+
 	<br>
 	<hr>
 	<table align=center width=450px>
