--- a/index.html
+++ b/index.html
@@ -285,6 +285,31 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 			</tr>
 		</center>
 	</table>
+</table>
+		<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					<td><img class="round" style="width:450px" src="./resources/mazevisual.png"/></td>
+				</td>
+			</tr>
+		</center>
+	</table>
+<table align=center width=420px>
+		<center>
+			<tr>
+				<td> 
+					Example rollouts on the Maze2D-medium-v1 environment, where the start positions are consistent across each column, and the
+goal position is located at the bottom right corner of the maze. The trajectory waypoints are color-coded, transitioning from blue to red as
+time advances. The bottom two rows demonstrate that Diffuser, DD, and DS can generate good plans that can be executed well with a
+handcoded controller. However, the respective action models result in differing executions. Compared to DD and Diffuser, DS generates
+more flexible and reliable trajectories that align closely with future waypoints planned by the observation model towards the goal.
+Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressive conditioning in the single goal setting of Maze2D.
+
+				</td>
+			</tr>
+		</center>
+	</table>
 
 	<br>
 	<hr>
