--- a/index.html
+++ b/index.html
@@ -231,42 +231,39 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 
 	<center><h1>Results</h1></center>
 
-	<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<b> Offline Reinforcement Learning Performance in MDP <b>
-				</td>
-			</tr>
-		</center>
-	</table>
-		<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<td><img class="round" style="width:450px" src="./resources/mdp.png"/></td>
-				</td>
-			</tr>
-		</center>
-	</table>
-<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<b> Offline Reinforcement Learning Performance in POMDP <b>
-				</td>
-			</tr>
-		</center>
-	</table>
-		<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<td><img class="round" style="width:450px" src="./resources/pomdp.png"/></td>
-				</td>
-			</tr>
-		</center>
-	</table>
+<div style="display: flex; justify-content: center;">
+    <table align="center" width="420px" style="margin-right: 20px;">
+        <tr>
+            <td>
+                <b>Offline Reinforcement Learning Performance in MDP</b>
+            </td>
+        </tr>
+    </table>
+    <table align="center" width="420px">
+        <tr>
+            <td>
+                <img class="round" style="width: 450px" src="./resources/mdp.png"/>
+            </td>
+        </tr>
+    </table>
+</div>
+<div style="display: flex; justify-content: center; margin-top: 20px;">
+    <table align="center" width="420px" style="margin-right: 20px;">
+        <tr>
+            <td>
+                <b>Offline Reinforcement Learning Performance in POMDP</b>
+            </td>
+        </tr>
+    </table>
+    <table align="center" width="420px">
+        <tr>
+            <td>
+                <img class="round" style="width: 450px" src="./resources/pomdp.png"/>
+            </td>
+        </tr>
+    </table>
+</div>
+
 		<table align=center width=420px>
 		<center>
 			<tr>
