--- a/index.html
+++ b/index.html
@@ -252,6 +252,18 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
         <tr>
             <td>
                 <b>Offline Reinforcement Learning Performance in POMDP</b>
+		     To generate the POMDPs datasets, we exclude two
+dimensions of the state for each environment from the D4RL
+locomotion datasets. Decision Stacks
+(DS), consistently achieves competitive or superior results
+compared to the other algorithms, including BC, DT, TT,
+and DD. Notably, DS outperforms other methods in most
+environments and attains the highest average score of 74.3,
+which reflects a 15.7% performance improvement over the
+next best-performing approach Diffuser. This highlights the
+effectiveness of our approach in handling POMDP tasks
+by more expressively modeling the dependencies among
+observations, actions, and rewards
             </td>
         </tr>
     </table>
