--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 
 	<center><h1>Results</h1></center>
 
-<div style="display: flex; justify-content: center;">
+<div style="display: flex; justify-content: center;margin-bottom: 20px;">
     <table align="center" width="420px" style="margin-right: 20px;">
         <tr>
             <td>
@@ -247,13 +247,12 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
         </tr>
     </table>
 </div>
-<div style="display: flex; justify-content: center; margin-top: 20px;">
+<div style="display: flex; justify-content: center; margin-top: 20px; margin-bottom: 20px;">
     <table align="center" width="420px" style="margin-right: 20px;">
         <tr>
             <td>
-                <b>Offline Reinforcement Learning Performance in POMDP</b>
-		     To generate the POMDPs datasets, we exclude two
-dimensions of the state for each environment from the D4RL
+                <b>Offline Reinforcement Learning Performance in POMDP. </b>
+		     We generate the POMDPs datasets from the D4RL
 locomotion datasets. Decision Stacks
 (DS), consistently achieves competitive or superior results
 compared to the other algorithms, including BC, DT, TT,
