--- a/index.html
+++ b/index.html
@@ -274,26 +274,23 @@ observations, actions, and rewards
         </tr>
     </table>
 </div>
-
-		<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<b> Maze2D tasks <b>
-				</td>
-			</tr>
-		</center>
-	</table>
-		<table align=center width=420px>
-		<center>
-			<tr>
-				<td> 
-					<td><img class="round" style="width:450px" src="./resources/maze.png"/></td>
-				</td>
-			</tr>
-		</center>
-	</table>
-</table>
+<div style="display: flex; justify-content: center;margin-bottom: 20px;">
+    <table align="center" width="420px" style="margin-right: 20px;">
+        <tr>
+            <td>
+               <b> Maze2D tasks <b>
+            </td>
+        </tr>
+    </table>
+    <table align="center" width="420px">
+        <tr>
+            <td>
+               <td><img class="round" style="width:450px" src="./resources/maze.png"/></td>
+            </td>
+        </tr>
+    </table>
+</div>
+		
 		<table align=center width=850px>
 		<center>
 			<tr>
