--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@ observations, actions, and rewards
     <table align="center" width="420px" style="margin-right: 20px;">
         <tr>
             <td>
-               <b>  Long-Horizon Goal-Conditioned Environments. <b> We test for the planning capabilities of Decision Stacks
+               <b>  Long-Horizon Goal-Conditioned Environments. <b> 
+		       We test for the planning capabilities of Decision Stacks
 on the Maze2D task from the D4RL (Fu et al., 2020) bench-
 mark. This is a challenging environment requiring an agent
 to generate a plan from a start location to a goal location.
