--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 			</tr>
 		</center>
 	</table>
+<div style="display: flex; justify-content: center;margin-bottom: 20px;margin-top: 20px">
 <table align="center" width="420px" style="margin-right: 20px;">
         <tr>
             <td>
@@ -338,6 +339,8 @@ to train 2 (state) + 3 (reward) + 3 (action) models.
             </td>
         </tr>
     </table>
+	</div>
+<div style="display: flex; justify-content: center;margin-bottom: 20px;margin-top: 20px">
 <table align="center" width="420px">
         <tr>
             <td>
@@ -345,7 +348,7 @@ to train 2 (state) + 3 (reward) + 3 (action) models.
             </td>
         </tr>
     </table>
-
+	</div>
 	<br>
 	<hr>
 	<table align=center width=450px>
