--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ mark. This is a challenging environment requiring an agent
 to generate a plan from a start location to a goal location.
 The demonstrations contain a sparse reward signal of +1 only when the agent reaches close to the goal.  
  Our experiments demonstrate that Decision Stacks generates robust trajectory plans and matching action sequences, 
-		       outperforming baselines with significant improvements through enhanced modularity and flexible modelling.
+outperforming baselines with significant improvements through enhanced modularity and flexible modelling.
             </td>
         </tr>
     </table>
@@ -322,8 +322,8 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 			</tr>
 		</center>
 	</table>
-<div style="display: flex; justify-content: center;margin-bottom: 20px;margin-top: 20px">
-<table align="center" width="420px" style="margin-right: 20px;">
+
+<table align="center" width="420px" style="margin-right: 20px;margin-top: 20px;">
         <tr>
             <td>
                 <b> Architectural Flexibility of Decision Stacks</b>
@@ -339,16 +339,15 @@ to train 2 (state) + 3 (reward) + 3 (action) models.
             </td>
         </tr>
     </table>
-	</div>
-<div style="display: flex; justify-content: center;margin-bottom: 20px;margin-top: 20px">
-<table align="center" width="420px">
+
+<table align="center" width="420px" style="margin-right: 20px;margin-top: 20px;">
         <tr>
             <td>
                 <img class="round" style="width: 450px" src="./resources/flexibilitytable.png"/>
             </td>
         </tr>
     </table>
-	</div>
+
 	<br>
 	<hr>
 	<table align=center width=450px>
