--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ outperforming baselines with significant improvements through enhanced modularit
 			</tr>
 		</center>
 	</table>
-<table align=center width=850px>
+<table align=center width=850px style="margin-right: 20px;margin-top: 20px;">
 		<center>
 			<tr>
 				<td> 
