--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ outperforming baselines with significant improvements through enhanced modularit
     </table>
 </div>
 		
-		<table align=center width=850px>
+		<table align=center width=750px>
 		<center>
 			<tr>
 				<td> 
@@ -307,7 +307,7 @@ outperforming baselines with significant improvements through enhanced modularit
 			</tr>
 		</center>
 	</table>
-<table align=center width=850px style="margin-right: 20px;margin-top: 20px;">
+<table align=center width=850px style="margin-top: 20px;">
 		<center>
 			<tr>
 				<td> 
@@ -323,7 +323,7 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 		</center>
 	</table>
 
-<table align="center" width="420px" style="margin-right: 20px;margin-top: 20px;">
+<table align="center" width="420px" style="margin-top: 20px;">
         <tr>
             <td>
                 <b> Architectural Flexibility of Decision Stacks</b>
