--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ We present Decision Stacks, a generative framework that decomposes goal-conditio
 
 	<hr>
 
-	<center><h1>Results</h1></center>
+	<center><h1>Performance in both POMDP and MDP locomotion tasks </h1></center>
 
 <div style="display: flex; justify-content: center;margin-bottom: 20px;">
     <table align="center" width="420px" style="margin-right: 20px;">
@@ -274,13 +274,14 @@ observations, actions, and rewards
         </tr>
     </table>
 </div>
-<div style="display: flex; justify-content: center;margin-bottom: 20px;">
+<hr>
+
+	<center><h1> Long-Horizon Goal-Conditioned Environments </h1></center>
+
+
     <table align="center" width="420px" style="margin-right: 20px;">
         <tr>
-            <td>
-               <b> Long-Horizon Goal-Conditioned Environments.<b>
-		       
-		        We test for the planning capabilities of Decision Stacks
+            <td> We test for the planning capabilities of Decision Stacks
 on the Maze2D task from the D4RL (Fu et al., 2020) bench-
 mark. This is a challenging environment requiring an agent
 to generate a plan from a start location to a goal location.
@@ -298,7 +299,7 @@ outperforming baselines with significant improvements through enhanced modularit
             </td>
         </tr>
     </table>
-</div>
+
 		
 		<table align=center width=750px>
 		<center>
