--- a/index.html
+++ b/index.html
@@ -325,11 +325,13 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 			</tr>
 		</center>
 	</table>
+<hr>
 
-<table align="left" width="720px" style="margin-top: 20px;">
+	<center><h1> Architectural Flexibility of Decision Stacks </h1></center>
+<table align=center width=850px style="margin-top: 20px;">
         <tr>
             <td>
-                <b> Architectural Flexibility of Decision Stacks</b>
+                
 		    Decision Stacks distinctly separates the prediction of obser-
 vations, rewards, and actions employing three distinct mod-
 els that can be trained independently using teacher forcing.
