--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ to train 2 (state) + 3 (reward) + 3 (action) models.
         </tr>
     </table>
 
-<table align="center" width="420px" style="margin-right: 20px;margin-top: 20px;">
+<table align="center" width="420px" style="margin-top: 20px;">
         <tr>
             <td>
                 <img class="round" style="width: 450px" src="./resources/flexibilitytable.png"/>
