--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@ observations, actions, and rewards
 
 	<center><h1> Long-Horizon Goal-Conditioned Environments </h1></center>
 
-
-    <table align="center" width="420px" style="margin-right: 20px;">
+    </table>
+    <table align="center" width="420px" style="margin-top: 20px;">
         <tr>
             <td> We test for the planning capabilities of Decision Stacks
 on the Maze2D task from the D4RL (Fu et al., 2020) bench-
@@ -328,6 +328,7 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 <hr>
 
 	<center><h1> Architectural Flexibility of Decision Stacks </h1></center>
+    </table>
 <table align=center width=850px style="margin-top: 20px;">
         <tr>
             <td>
