--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ Figure 3. Bar chart comparison of Diffuser, DD and DS with and without progressi
 		    Decision Stacks distinctly separates the prediction of obser-
 vations, rewards, and actions employing three distinct mod-
 els that can be trained independently using teacher forcing.
-In this section, we explore the additional flexibility offered
+We explore the additional flexibility offered
 by different architecture choices for each module. We display a combination of 2x3x3 policy
 agents for the Hopper-medium v2 POMDP environment.
 Since we adopt a modular structure, we can compose the
