--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ observations, actions, and rewards
 <hr>
 
 	<center><h1> Long-Horizon Goal-Conditioned Environments </h1></center>
-
+<div style="display: flex; justify-content: center;margin-bottom: 20px;">
     </table>
     <table align="center" width="420px" style="margin-top: 20px;">
         <tr>
@@ -288,7 +288,7 @@ to generate a plan from a start location to a goal location.
 The demonstrations contain a sparse reward signal of +1 only when the agent reaches close to the goal.  
  Our experiments demonstrate that Decision Stacks generates robust trajectory plans and matching action sequences, 
 outperforming baselines with significant improvements through enhanced modularity and flexible modelling.
-		      
+	
             </td>
         </tr>
     </table>
@@ -299,7 +299,7 @@ outperforming baselines with significant improvements through enhanced modularit
             </td>
         </tr>
     </table>
-
+</div>	      
 		
 		<table align=center width=750px>
 		<center>
