--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@ via Modular Generative Models" />
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px;margin-bottom: 20px;"><b>Decision Stacks: Flexible Reinforcement Learning
+		<span style="font-size:36px;margin-bottom: 40px;"><b>Decision Stacks: Flexible Reinforcement Learning
 via Modular Generative Models<b></span>
 		<table align=center width=600px>
-			<table align=center width=600px style="margin-bottom: 20px;">
+			<table align=center width=600px style="margin-top: 40px;margin-bottom: 20px;">
 				<tr>
 					<td align=center width=100px>
 						<center>
