--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ which reflects a 15.7% performance improvement over the
 next best-performing approach Diffuser. This highlights the
 effectiveness of our approach in handling POMDP tasks
 by more </b> expressively modeling the dependencies <b> among
-observations, actions, and rewards
+observations, actions, and rewards.
             </td>
         </tr>
     </table>
@@ -295,7 +295,7 @@ mark. This is a challenging environment requiring an agent
 to generate a plan from a start location to a goal location.
 The demonstrations contain a sparse reward signal of +1 only when the agent reaches close to the goal.  
  Our experiments demonstrate that Decision Stacks generates robust trajectory plans and matching action sequences, 
-outperforming baselines with significant improvements through <b> enhanced modularity </b> and <b> flexible modelling </b>.
+outperforming baselines with significant improvements through <b> enhanced modularity </b> and <b> flexible modelling</b>.
 	
             </td>
         </tr>
