--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ via Modular Generative Models<b></span>
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href=="https://www.linkedin.com/in/siyanzhao">Siyan Zhao</a></span>
+							<span style="font-size:24px"><a href=="https://www.linkedin.com/in/siyanzhao/">Siyan Zhao</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
