--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ environments and attains the highest average score of 74.3,
 which reflects a 15.7% performance improvement over the
 next best-performing approach Diffuser. This highlights the
 effectiveness of our approach in handling POMDP tasks
-by more </b> expressively modeling the dependencies <b> among
+by more <b> expressively modeling the dependencies </b> among
 observations, actions, and rewards.
             </td>
         </tr>
