--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ outperforming baselines with significant improvements through <b> enhanced modul
     <table align="center" width="420px">
         <tr>
             <td>
-               <td><img class="round" style="width:450px" src="./resources/maze.png"/></td>
+               <td><img class="round" style="width:450px" src="./resources/traj_withgoal.png"/></td>
             </td>
         </tr>
     </table>
