--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@ to train 2 (state) + 3 (reward) + 3 (action) models.
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paperds.png"/></a></td>
 			<td><span style="font-size:14pt">Siyan Zhao and Aditya Grover.<br>
 				<b>Decision Stacks: Flexible Reinforcement Learning via Modular Generative Models</b><br>
+				If you find our work useful, please cite it using the following BibTeX entry:
+				<br>
 				
 				</span>
 			</td>
