--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@ helpful for test-time generalization.
     <table align="center" width="420px" style="margin-top: 20px;">
         <tr>
             <td> We test for the planning capabilities of Decision Stacks
-on the Maze2D task from the D4RL bench-
-mark. This is a challenging environment requiring an agent
+on the Maze2D task from the D4RL benchmark. This is a challenging environment requiring an agent
 to generate a plan from a start location to a goal location.
 The demonstrations contain a sparse reward signal of +1 only when the agent reaches close to the goal.  
  Our experiments demonstrate that Decision Stacks generates robust trajectory plans and matching action sequences, 
