--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ via Modular Generative Models<b></span>
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href=''>[Paper]</a></span>
+							<span style="font-size:24px"><a href='https://arxiv.org/abs/2306.06253'>[Paper]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
